--- a/benchmarks/binary-vs-ridge-vs-linear/binary-vs-ridge-vs-linear.Rmd
+++ b/benchmarks/binary-vs-ridge-vs-linear/binary-vs-ridge-vs-linear.Rmd
@@ -96,7 +96,7 @@ cboost_ridge$train(trace = as.integer(iter_max / 4))
 ## Fit ridge regression on categorical feature with binary base-learner
 
 ```{r}
-response = ResponseRegr$new("mpg", as.matrix(df_cat$y))
+response = ResponseRegr$new("y", as.matrix(df_cat$y))
 
 cdata_source = CategoricalData$new(df_cat$x, "x")
 
@@ -187,6 +187,34 @@ mb = microbenchmark::microbenchmark(
      optimizer    = optimizer
    )
    cboost$train(trace = 0)
+  },
+  "binary" = {
+    response = ResponseRegr$new("y", as.matrix(df_cat$y))
+
+    cdata_source = CategoricalData$new(df_cat$x, "x")
+
+    bl_list = lapply(classes, function (cl) BaselearnerCategoricalBinary$new(cdata_source, cl))
+
+    factory_list = BlearnerFactoryList$new()
+    temp = lapply(bl_list, function (bl) factory_list$registerFactory(bl))
+
+    loss_quadratic = LossQuadratic$new()
+    optimizer = OptimizerCoordinateDescent$new()
+
+    log_iterations = LoggerIteration$new(" iterations", TRUE, iter_max)
+    logger_list = LoggerList$new()
+    logger_list$registerLogger(log_iterations)
+
+    cboost_binary = Compboost_internal$new(
+      response      = response,
+      learning_rate = learning_rate,
+      stop_if_all_stopper_fulfilled = FALSE,
+      factory_list = factory_list,
+      loss         = loss_quadratic,
+      logger_list  = logger_list,
+      optimizer    = optimizer
+    )
+    cboost_binary$train(trace = 0)
   }, times = 20L
 )
 ```
